--- a/写在前面.htm
+++ b/写在前面.htm
@@ -68,8 +68,8 @@
   </table>
 
   <h2>相关链接</h2>
-  项目Github仓库：（待补）<a href=""></a><br>
-  在线版网址：（待补）<a href=""></a><br>
+  项目Github仓库：<a href="https://github.com/SparkPlugWS/MGEchm">https://github.com/SparkPlugWS/MGEchm</a><br>
+  在线版网址：<a href="https://sparkplugws.github.io/index.htm">https://sparkplugws.github.io/index.htm</a><br>
   最新版下载链接：（待补）<a href=""></a><br>
   魔物娘图鉴中文维基：
   <a
