--- a/MGE1/目录1.htm
+++ b/MGE1/目录1.htm
@@ -48,7 +48,42 @@
 <a href="">23.食人魔</a><br>
 <a href="">24.阿拉克尼</a><br>
 <a href="">25.拉米亚</a><br>
+26.美杜莎<br>
+27.厄喀德娜<br>
+28.蜥蜴人<br>
+29.沙罗曼蛇<br>
+30.蝙蝠人<br>
+31.半人马<br>
+32.独角兽<br>
+33.米洛陶洛斯<br>
+34.荷斯陶洛斯<br>
+35.大蚂蚁<br>
+36.阿拉克尼蚁<br>
+37.螳螂<br>
+38.小仙女<br>
+39.小妖精<br>
+40.凉南希<br>
+41.凯斯柏莎<br>
 <br>
+资料·妖精之国<br>
+<br>
+42.精灵<br>
+43.黑暗精灵<br>
+44.矮人<br>
+<br>
+资料·精灵与矮人<br>
+<br>
+45.亚马逊女战士<br>
+46.爱丽丝<br>
+47.艾露普<br>
+48.独眼巨人<br>
+49.美人鱼<br>
+50.梅洛<br>
+51.海洋主教<br>
+52.涅瑞伊得斯<br>
+53.斯库拉<br>
+54.卡律布狄斯<br>
+
 <br>
 <br>
 <br>
