--- a/MGE1/目录1.htm
+++ b/MGE1/目录1.htm
@@ -107,7 +107,7 @@
 73.幽灵<br>
 74.骷髅<br>
 75.梦魇<br>
-76,重身幽灵<br>
+76.重身幽灵<br>
 77.杜拉罕<br>
 78.吸血鬼<br>
 79.小恶魔<br>
@@ -118,6 +118,39 @@
 <br>
 资料·萨巴斯<br>
 资料·魔物的魔法<br>
+<br>
+84.妖狐<br>
+85.雪女<br>
+86.赤鬼<br>
+87.乌鸦天狗<br>
+88.河童<br>
+89.女郎蜘蛛<br>
+90.狐仙<br>
+<br>
+资料·日本<br>
+<br>
+91.天使<br>
+92.黑暗天使<br>
+93.黑暗祭祀<br>
+<br>
+资料·神之眷属与世界的构造<br>
+<br>
+94.龙<br>
+<br>
+资料·元素精灵<br>
+<br>
+95.温蒂妮<br>
+96.伊格尼斯<br>
+97.希尔芙<br>
+98.诺姆<br>
+99.黑暗物质<br>
+<br>
+资料·魔界<br>
+资料·魔王希冀的理想乡<br>
+<br>
+100.莉莉姆<br>
+<br>
+后记<br>
 
 <br>
 <br>
