--- a/MGE1/目录1.htm
+++ b/MGE1/目录1.htm
@@ -19,7 +19,7 @@
 <a href="01魅魔.htm">01.魅魔</a><br>
 <a href="02次级魅魔.htm">02.次级魅魔</a><br>
 <br>
-<a href="">资料·魔物化</a><br>
+<a href="资料魔物化.htm">资料·魔物化</a><br>
 <a href="">资料·关于元精与魔力</a><br>
 <br>
 <a href="">03.史莱姆</a><br>
