--- a/MGE1/目录1.htm
+++ b/MGE1/目录1.htm
@@ -14,7 +14,7 @@
 <br>
 目录<br>
 <br>
-<a href="资料魅魔.htm">资料·魔物</a><br>
+<a href="资料魔物.htm">资料·魔物</a><br>
 <br>
 <a href="01魅魔.htm">01.魅魔</a><br>
 <a href="02次级魅魔.htm">02.次级魅魔</a><br>
