--- a/MGE1/资料魔物化.htm
+++ b/MGE1/资料魔物化.htm
@@ -19,11 +19,11 @@
     <p>女性被注入魔力后，会全身发热，思维也变得模糊不清，变得无法抵抗杭由魔物带来的快乐与诱惑。从而变本加厉的渴求着被注入大量魔力。</p>
     <p>用不了多久，被注入魔力的女性，就会在快感与体内魔力的双重作用下，逐渐转化成魔物。</p>
     <p>与魔物交合的刺激，以及身体的质变，让理性与思维，渐渐臣服于快感和快乐，很快其身心就会完全沦为魔物。</p> 
-    <p>除了性交以外，还有女性被咬伤后，从伤口注入的魔力将元精强制驱逐出体外后魔物化;在空气中充满魔力的魔界停留过长时间(参考P.228);或者服用了以魅魔的魔力炼制的药物，其他的方法还有诸如被产卵，吸入了孢子导致被寄生等等，也会导致人类魔物化。</p>
+    <p>除了性交以外，还有女性被咬伤后，从伤口注入的魔力将元精强制驱逐出体外后魔物化；在空气中充满魔力的魔界停留过长时间（参考P.228）；或者服用了以魅魔的魔力炼制的药物，其他的方法还有诸如被产卵，吸入了孢子导致被寄生等等，也会导致人类魔物化。</p>
     <br>
     <h2>2.魔物化的身体</h2>
     <p>变成魔物后，身为人类女性时的姿态与外貌基本都会得以保留，变化后的容貌会散发出魔性的魅力，肉体则会拥有令男性产生极强色欲的诱惑性。</p>
-    <p>之后身体会出现作为种族特征的特定器官（磐如魅魔则是角、翼与尾巴）</p>
+    <p>之后身体会出现作为种族特征的特定器官（譬如魅魔则是角、翼与尾巴）</p>
     <p>同时，女性的性欲激增，身体因为渴求男性而饥渴难耐，成为了为品尝快乐而顺从贪欲的敏感身体。</p>
     <p>藉由魔物的身体性交带来的快乐，是作为人类时所无法比拟的，人类很快就会被那种魔性的快乐所虏吧。</p>
     <p>而且，在人类变成魔物后，会本能的学会魔物特有的能力以及一些取悦男性的技巧，也会自然而然的付之于行。很快。她们就会使用那些技巧去诱惑男性了。</p>
