--- a/MGE1/01魅魔.htm
+++ b/MGE1/01魅魔.htm
@@ -37,7 +37,7 @@
   <p>没有相当程度的定力是无法抗拒她们的诱惑的，在摄取元精过后，如果看上了该名男性，就会将之带回她们所在的魔界。</p>
   <p>除此之外，她们也会袭击人类女性，通过不断的交媾以注入自己的魔力，让女性腐化堕落而变成与她们一样的“魅魔”。刚刚转变为魅魔的女性被称为“<a href="02次级魅魔.htm">次级魅魔</a>”。</p>
   <p>除此之外，会被变成魔物的不只是女性，在与魅魔交时的时候，人类男性也有被注入魔力的可能。</p>
-  <p>被注入魔力的男性，性欲会异常旺盛，并制造出大量元精供她们享用。对她们来说是一种非常方便的存在。这种情况下，那个男性可以说已经不是人类了，变成了依靠与魅魔性交时被注入的魔力为生，被称为<a href="资料魔物化.htm">夜魔</a>的存在。</p>
+  <p>被注入魔力的男性，性欲会异常旺盛，并制造出大量元精供她们享用。对她们来说是一种非常方便的存在。这种情况下，那个男性可以说已经不是人类了，变成了依靠与魅魔性交时被注入的魔力为生，被称为<a href="资料魔物化.htm#incubus">夜魔</a>的存在。</p>
   <p>男性一旦成为夜魔，只能永远的与魅魔交欢下去。</p>
   <br>
   <p>而且，将魔物们变成现在的女性形态的现任魔王，亦是魅魔属之一。</p>
