--- a/MGE1/资料魔物化.htm
+++ b/MGE1/资料魔物化.htm
@@ -43,7 +43,7 @@
     <p>之后，被她们变成魔物的女性，会随着本能袭击男性。看到那些未曾体验过快乐或者否定快乐的女性沉溺于快乐之中的模样，以及为恋爱而烦恼的女性幸福的在所爱之人身上扭动着腰肢，她们引以为乐。</p>
     <p>人类在魔物化之时伴随的恍惚以及之后对幸福的诠释，导致魔物们强烈的有着将人类魔物化的倾向。</p>
     <br>
-    <h2>夜魔</h2>
+    <h2><a name="incubus">夜魔</a></h2>
     <p>夜魔是人类男男性被魔力侵蚀，而引起质变的存在。</p>
     <p>虽然在多数情况下，夜魔被归类为魔物。但是从严格意义上来说魔物只有雌性，因此夜魔只能算是拥有魔物特性的人类而已。</p>
     <br>
