--- a/MGE1/资料魔物.htm
+++ b/MGE1/资料魔物.htm
@@ -44,20 +44,23 @@
   <p>对魔物们来说，与人类男性的媾合，是无与伦比的愉悦，也是根植于种族基干的来自本能中的欲望。</p>
   <br>
   <h2>5.魔物们的价值观</h2>
-<p>魔物们在捕获人类男性后，第一行为准则和价值观就是与其交合。自然，魔物之间的交流，基本也是围绕着交合这件事来进行，对她们而言，淫乱是好事，即使是年幼的魔物，也会像成年的魔物一样好色，总是幻想着与男性交合。一有机会，她们便会袭击男性。</p>
-<p>为了得到中意的男性，她们多数会使用强硬的手段。遇到反感魔物或者性交的男性，她们就会使用强制交合、诱惑、魔术或者药物等等手段，让男性成为自己的俘虏。</p>
-<p>此外，有着极强性欲的她们，对那些被人类女性认为是肮脏的男性性欲予以肯定，反过来说，如果那些肮脏的事情发生在自己身上，她们依旧会欣然接受并袭击那些男性，与其做爱。</p>
-<p>她们无条件的对人类男性抱有强烈的好意，无论是进食还是生殖。对她们而言，人类的男性是必要的存在，她们不会做出杀害人类男性的事情。</p>
-<p>无论怎样凶暴虐的魔物，除了自卫或者保护自己的丈夫以外，都不会杀害人类。</p>
-<br>
-<h2>6.与人类男性的关系</h2>
-<p>魔物们和人类一样，有着夫妇的关系。由于没有雄性的存在，丈夫自然是人类的男性。</p>
-<p>但是魔物们的夫妇关系，并不仅仅是感情与契约。她们如果非常中意某个男性的话，对那个男性的关心，将会以对那个男性产生极强的欲望，以及对那个男性的气味或者元精的味道有着极强的眷恋来表现。反过来说，除此以外，她们对男性的其他方面并不怎么关心只会把那个男性当做唯一的雄性来对待。</p>
-<p>这是她们的本能，把那个男性当成丈夫来认知的状态，虽然她们有着极高的性欲，同时也是快乐主义，但是一旦决定了自己的丈夫，就会对其一心一意。对她们来说，丈夫是比自己更加重要的存在。</p>
-<p>关于这些习性存在的理由，有着“为了不让其他的魔物把猎物抢走”、“为了从已经魅惑的男性身上，安定的获得大量元精”等说法。但是，也有说法认为，这仅仅是因为现魔王的性格，影响了其他魔物所导致的结果。</p>
-<p>出于同样的理由，魔物并不怎么倾向于袭击沾染了其他魔物气味或魔力的男性。</p>
-<p>但是，当一些魔物真的很中意某个男性的时候，这种时候一夫一妻的约束并不能限制她们。被复数的魔物相中的男性，会与一个接一个的魔物进行车轮战，又或者是同时和多个魔物进行“搏斗”，然后奉献出大量的元精。</p>
-<p>还有一种情况，就是魔物们把男性当成战利品或者奴隶。在这种情况下，对她们来说，战利品或者奴隶，等价于丈夫。与“战利品、奴隶”所表达的意思正好相反，这是她们对男性至高的爱情表现。</p>
+  <p>魔物们在捕获人类男性后，第一行为准则和价值观就是与其交合。自然，魔物之间的交流，基本也是围绕着交合这件事来进行，对她们而言，淫乱是好事，即使是年幼的魔物，也会像成年的魔物一样好色，总是幻想着与男性交合。一有机会，她们便会袭击男性。
+  </p>
+  <p>为了得到中意的男性，她们多数会使用强硬的手段。遇到反感魔物或者性交的男性，她们就会使用强制交合、诱惑、魔术或者药物等等手段，让男性成为自己的俘虏。</p>
+  <p>此外，有着极强性欲的她们，对那些被人类女性认为是肮脏的男性性欲予以肯定，反过来说，如果那些肮脏的事情发生在自己身上，她们依旧会欣然接受并袭击那些男性，与其做爱。</p>
+  <p>她们无条件的对人类男性抱有强烈的好意，无论是进食还是生殖。对她们而言，人类的男性是必要的存在，她们不会做出杀害人类男性的事情。</p>
+  <p>无论怎样凶暴虐的魔物，除了自卫或者保护自己的丈夫以外，都不会杀害人类。</p>
+  <br>
+  <h2>6.与人类男性的关系</h2>
+  <p>魔物们和人类一样，有着夫妇的关系。由于没有雄性的存在，丈夫自然是人类的男性。</p>
+  <p>
+    但是魔物们的夫妇关系，并不仅仅是感情与契约。她们如果非常中意某个男性的话，对那个男性的关心，将会以对那个男性产生极强的欲望，以及对那个男性的气味或者元精的味道有着极强的眷恋来表现。反过来说，除此以外，她们对男性的其他方面并不怎么关心只会把那个男性当做唯一的雄性来对待。
+  </p>
+  <p>这是她们的本能，把那个男性当成丈夫来认知的状态，虽然她们有着极高的性欲，同时也是快乐主义，但是一旦决定了自己的丈夫，就会对其一心一意。对她们来说，丈夫是比自己更加重要的存在。</p>
+  <p>关于这些习性存在的理由，有着“为了不让其他的魔物把猎物抢走”、“为了从已经魅惑的男性身上，安定的获得大量元精”等说法。但是，也有说法认为，这仅仅是因为现魔王的性格，影响了其他魔物所导致的结果。</p>
+  <p>出于同样的理由，魔物并不怎么倾向于袭击沾染了其他魔物气味或魔力的男性。</p>
+  <p>但是，当一些魔物真的很中意某个男性的时候，这种时候一夫一妻的约束并不能限制她们。被复数的魔物相中的男性，会与一个接一个的魔物进行车轮战，又或者是同时和多个魔物进行“搏斗”，然后奉献出大量的元精。</p>
+  <p>还有一种情况，就是魔物们把男性当成战利品或者奴隶。在这种情况下，对她们来说，战利品或者奴隶，等价于丈夫。与“战利品、奴隶”所表达的意思正好相反，这是她们对男性至高的爱情表现。</p>
 </body>
 
 </html>
