--- a/MGE1/目录1.htm
+++ b/MGE1/目录1.htm
@@ -22,8 +22,8 @@
 <a href="资料魔物化.htm">资料·魔物化</a><br>
 <a href="">资料·关于元精与魔力</a><br>
 <br>
-<a href="">03.史莱姆</a><br>
-<a href="">04.红色史莱姆</a><br>
+<a href="03史莱姆.htm">03.史莱姆</a><br>
+<a href="04红色史莱姆.htm">04.红色史莱姆</a><br>
 <a href="">05.史莱姆女王</a><br>
 <a href="">06.哥布林</a><br>
 <a href="">07.大哥布林</a><br>
