提交 哥布林（2/2）

--- a/MGE1/目录1.htm
+++ b/MGE1/目录1.htm
@@ -25,8 +25,8 @@
 <a href="03史莱姆.htm">03.史莱姆</a><br>
 <a href="04红色史莱姆.htm">04.红色史莱姆</a><br>
 <a href="05史莱姆女王.htm">05.史莱姆女王</a><br>
-<a href="">06.哥布林</a><br>
-<a href="">07.大哥布林</a><br>
+<a href="06哥布林.htm">06.哥布林</a><br>
+<a href="07大哥布林.htm">07.大哥布林</a><br>
 <a href="">08.狼人</a><br>
 <a href="">09.猫人</a><br>
 <a href="">10.兔人</a><br>
