--- a/MGE1/目录1.htm
+++ b/MGE1/目录1.htm
@@ -27,9 +27,9 @@
 <a href="05史莱姆女王.htm">05.史莱姆女王</a><br>
 <a href="06哥布林.htm">06.哥布林</a><br>
 <a href="07大哥布林.htm">07.大哥布林</a><br>
-<a href="">08.狼人</a><br>
-<a href="">09.猫人</a><br>
-<a href="">10.兔人</a><br>
+<a href="08狼人.htm">08.狼人</a><br>
+<a href="09猫人.htm">09.猫人</a><br>
+<a href="10兔人.htm">10.兔人</a><br>
 <a href="">11.绵羊人</a><br>
 <a href="">12.阿娜温</a><br>
 <a href="">13.曼德拉草</a><br>
