提交 其他兽人属

--- a/MGE1/目录1.htm
+++ b/MGE1/目录1.htm
@@ -30,7 +30,7 @@
 <a href="08狼人.htm">08.狼人</a><br>
 <a href="09猫人.htm">09.猫人</a><br>
 <a href="10兔人.htm">10.兔人</a><br>
-<a href="">11.绵羊人</a><br>
+<a href="11绵羊人.htm">11.绵羊人</a><br>
 <a href="">12.阿娜温</a><br>
 <a href="">13.曼德拉草</a><br>
 <a href="">14.玛坦戈</a><br>
