提交 森林系还剩的

--- a/MGE1/目录1.htm
+++ b/MGE1/目录1.htm
@@ -36,8 +36,8 @@
 <a href="14玛坦戈.htm">14.玛坦戈</a><br>
 <a href="15树妖.htm">15.树妖</a><br>
 <a href="16蜜蜂.htm">16.蜜蜂</a><br>
-<a href="">17.大黄蜂</a><br>
-<a href="">18.灰熊</a><br>
+<a href="17大黄蜂.htm">17.大黄蜂</a><br>
+<a href="18灰熊.htm">18.灰熊</a><br>
 <a href="">19.哈比</a><br>
 <a href="">20.黑色哈比</a><br>
 <a href="">21.鸡蛇兽</a><br>
