--- a/MGE1/目录1.htm
+++ b/MGE1/目录1.htm
@@ -41,28 +41,28 @@
 <a href="19哈比.htm">19.哈比</a><br>
 <a href="20黑色哈比.htm">20.黑色哈比</a><br>
 <a href="21鸡蛇兽.htm">21.鸡蛇兽</a><br>
-<a href="">22.半兽人</a><br>
-<a href="">23.食人魔</a><br>
+<a href="22半兽人.htm">22.半兽人</a><br>
+<a href="23食人魔.htm">23.食人魔</a><br>
 <a href="">24.阿拉克尼</a><br>
 <a href="">25.拉米亚</a><br>
-26.美杜莎<br>
-27.厄喀德娜<br>
-28.蜥蜴人<br>
-29.沙罗曼蛇<br>
-30.蝙蝠人<br>
-31.半人马<br>
-32.独角兽<br>
-33.米洛陶洛斯<br>
-34.荷斯陶洛斯<br>
-35.大蚂蚁<br>
-36.阿拉克尼蚁<br>
-37.螳螂<br>
-38.小仙女<br>
-39.小妖精<br>
-40.凉南希<br>
-41.凯斯柏莎<br>
+<a href="">26.美杜莎</a><br>
+<a href="">27.厄喀德娜</a><br>
+<a href="">28.蜥蜴人</a><br>
+<a href="">29.沙罗曼蛇</a><br>
+<a href="">30.蝙蝠人</a><br>
+<a href="">31.半人马</a><br>
+<a href="">32.独角兽</a><br>
+<a href="">33.米洛陶洛斯</a><br>
+<a href="">34.荷斯陶洛斯</a><br>
+<a href="">35.大蚂蚁</a><br>
+<a href="">36.阿拉克尼蚁</a><br>
+<a href="">37.螳螂</a><br>
+<a href="">38.小仙女</a><br>
+<a href="">39.小妖精</a><br>
+<a href="">40.凉南希</a><br>
+<a href="">41.凯斯柏莎</a><br>
 <br>
-资料·妖精之国<br>
+<a href="">资料·妖精之国</a><br>
 <br>
 42.精灵<br>
 43.黑暗精灵<br>
