--- a/MGE1/目录1.htm
+++ b/MGE1/目录1.htm
@@ -43,8 +43,8 @@
 <a href="21鸡蛇兽.htm">21.鸡蛇兽</a><br>
 <a href="22半兽人.htm">22.半兽人</a><br>
 <a href="23食人魔.htm">23.食人魔</a><br>
-<a href="">24.阿拉克尼</a><br>
-<a href="">25.拉米亚</a><br>
+<a href="24阿拉克尼.htm">24.阿拉克尼</a><br>
+<a href="25拉米亚.htm">25.拉米亚</a><br>
 <a href="">26.美杜莎</a><br>
 <a href="">27.厄喀德娜</a><br>
 <a href="">28.蜥蜴人</a><br>
