--- a/MGE1/目录1.htm
+++ b/MGE1/目录1.htm
@@ -45,9 +45,9 @@
 <a href="23食人魔.htm">23.食人魔</a><br>
 <a href="24阿拉克尼.htm">24.阿拉克尼</a><br>
 <a href="25拉米亚.htm">25.拉米亚</a><br>
-<a href="">26.美杜莎</a><br>
-<a href="">27.厄喀德娜</a><br>
-<a href="">28.蜥蜴人</a><br>
+<a href="26美杜莎.htm">26.美杜莎</a><br>
+<a href="27厄喀德娜.htm">27.厄喀德娜</a><br>
+<a href="28蜥蜴人.htm">28.蜥蜴人</a><br>
 <a href="">29.沙罗曼蛇</a><br>
 <a href="">30.蝙蝠人</a><br>
 <a href="">31.半人马</a><br>
