--- a/MGE1/目录1.htm
+++ b/MGE1/目录1.htm
@@ -48,7 +48,7 @@
 <a href="26美杜莎.htm">26.美杜莎</a><br>
 <a href="27厄喀德娜.htm">27.厄喀德娜</a><br>
 <a href="28蜥蜴人.htm">28.蜥蜴人</a><br>
-<a href="">29.沙罗曼蛇</a><br>
+<a href="29沙罗曼蛇.htm">29.沙罗曼蛇</a><br>
 <a href="">30.蝙蝠人</a><br>
 <a href="">31.半人马</a><br>
 <a href="">32.独角兽</a><br>
