--- a/MGE1/19哈比.htm
+++ b/MGE1/19哈比.htm
@@ -48,6 +48,10 @@
   <hr>
   附图：
   <img src="img\魔物娘图鉴I\48-49哈比-重置.jpg">
+  <hr>
+  旧版：
+  <img src="img\魔物娘图鉴I\48-49哈比.jpg">
+
 </body>
 
 </html>
