--- a/MGE1/20黑色哈比.htm
+++ b/MGE1/20黑色哈比.htm
@@ -43,7 +43,10 @@
 
   <hr>
   附图：
-  <img src="img\魔物娘图鉴I\50-51黑色哈比重置.jpg">
+  <img src="img\魔物娘图鉴I\50-51黑色哈比-重置.jpg">
+  <hr>
+  旧版：
+  <img src="img\魔物娘图鉴I\50-51黑色哈比.jpg">
 </body>
 
 </html>
