--- a/MGE1/目录1.htm
+++ b/MGE1/目录1.htm
@@ -50,10 +50,10 @@
 <a href="28蜥蜴人.htm">28.蜥蜴人</a><br>
 <a href="29沙罗曼蛇.htm">29.沙罗曼蛇</a><br>
 <a href="30蝙蝠人.htm">30.蝙蝠人</a><br>
-<a href="">31.半人马</a><br>
-<a href="">32.独角兽</a><br>
-<a href="">33.米洛陶洛斯</a><br>
-<a href="">34.荷斯陶洛斯</a><br>
+<a href="31半人马.htm">31.半人马</a><br>
+<a href="32独角兽.htm">32.独角兽</a><br>
+<a href="33米洛陶洛斯.htm">33.米洛陶洛斯</a><br>
+<a href="34荷斯陶洛斯.htm">34.荷斯陶洛斯</a><br>
 <a href="">35.大蚂蚁</a><br>
 <a href="">36.阿拉克尼蚁</a><br>
 <a href="">37.螳螂</a><br>
