--- a/MGE1/目录1.htm
+++ b/MGE1/目录1.htm
@@ -54,10 +54,10 @@
 <a href="32独角兽.htm">32.独角兽</a><br>
 <a href="33米洛陶洛斯.htm">33.米洛陶洛斯</a><br>
 <a href="34荷斯陶洛斯.htm">34.荷斯陶洛斯</a><br>
-<a href="">35.大蚂蚁</a><br>
-<a href="">36.阿拉克尼蚁</a><br>
-<a href="">37.螳螂</a><br>
-<a href="">38.小仙女</a><br>
+<a href="35大蚂蚁.htm">35.大蚂蚁</a><br>
+<a href="36阿拉克尼蚁.htm">36.阿拉克尼蚁</a><br>
+<a href="37螳螂.htm">37.螳螂</a><br>
+<a href="38小仙女.htm">38.小仙女</a><br>
 <a href="">39.小妖精</a><br>
 <a href="">40.凉南希</a><br>
 <a href="">41.凯斯柏莎</a><br>
