--- a/MGE1/目录1.htm
+++ b/MGE1/目录1.htm
@@ -58,8 +58,8 @@
 <a href="36阿拉克尼蚁.htm">36.阿拉克尼蚁</a><br>
 <a href="37螳螂.htm">37.螳螂</a><br>
 <a href="38小仙女.htm">38.小仙女</a><br>
-<a href="">39.小妖精</a><br>
-<a href="">40.凉南希</a><br>
+<a href="39小妖精.htm">39.小妖精</a><br>
+<a href="40凉南希.htm">40.凉南希</a><br>
 <a href="">41.凯斯柏莎</a><br>
 <br>
 <a href="">资料·妖精之国</a><br>
