--- a/MGE1/40凉南希.htm
+++ b/MGE1/40凉南希.htm
@@ -47,7 +47,7 @@
     
     <hr>
     附图：
-    <img src="img\魔物娘图鉴I\68-69沙罗曼蛇.jpg">  
+    <img src="img\魔物娘图鉴I\90-91凉南希.jpg">  
   </body>
   
   </html>
