--- a/MGE1/40凉南希.htm
+++ b/MGE1/40凉南希.htm
@@ -41,7 +41,7 @@
     <br>
     <p>与她们交合过的男性，会获得卓越的与创作艺术相关的才能和实力。有了这样的能力，获得巨天的财富和名声并非难事。</p>
     <p>但是，她们拥有的诱惑魔法会逐渐侵蚀到精神，慢慢的会变得对除了贡献艺术品给她们和创造艺术品之外的事毫无兴趣。再过一段时间以后甚至会觉得财富和名声都是累赘，再之后便与她们一并消失的无影无际。</p>
-    <p>有传闻说，男性最终是被她们带到了“妹精之国”，在那里一直为她们创作艺术品，过着恩爱的生活。</p>
+    <p>有传闻说，男性最终是被她们带到了<a href="资料妖精之国.htm">“妖精之国”</a>，在那里一直为她们创作艺术品，过着恩爱的生活。</p>
     <br>
     <p>另外，左页的插绘是喜欢绘画的凉南希的模样，但她们还喜欢小说音乐等各种艺术领域，会被各种自己喜欢的事物的作者所吸引。</p>
     
