--- a/MGE1/目录1.htm
+++ b/MGE1/目录1.htm
@@ -60,13 +60,13 @@
 <a href="38小仙女.htm">38.小仙女</a><br>
 <a href="39小妖精.htm">39.小妖精</a><br>
 <a href="40凉南希.htm">40.凉南希</a><br>
-<a href="">41.凯斯柏莎</a><br>
+<a href="41凯斯柏莎.htm">41.凯斯柏莎</a><br>
 <br>
-<a href="">资料·妖精之国</a><br>
+<a href="资料妖精之国.htm">资料·妖精之国</a><br>
 <br>
-42.精灵<br>
-43.黑暗精灵<br>
-44.矮人<br>
+<a href="">42.精灵</a><br>
+<a href="">43.黑暗精灵</a><br>
+<a href="">44.矮人</a><br>
 <br>
 资料·精灵与矮人<br>
 <br>
@@ -110,10 +110,10 @@
 79.小恶魔<br>
 80.黑暗史莱姆<br>
 81.别西卜<br>
-82.巴风特<br>
+<a href="82巴风特.htm">82.巴风特</a><br>
 83.魔女<br>
 <br>
-资料·萨巴斯<br>
+<a href="资料萨巴斯.htm">资料·萨巴斯</a><br>
 资料·魔物的魔法<br>
 <br>
 84.妖狐<br>
