--- a/MGE1/38小仙女.htm
+++ b/MGE1/38小仙女.htm
@@ -36,7 +36,7 @@
   <p>接着，被比任何点心都要甜美的精液注入，感受到了作为魔物的幸福。</p>
   <p>因为她们身体很小，力量也很弱，仅有一只的话，抓住并给予其一定的快乐就能满足之，这样饲养一只小仙女也并非难事。但是，如果遇到一群小仙女麻烦可就大了，会被她们覆盖全身直到昏死过去以前都要陪她们玩“性的游戏”。</p>
   <br>
-  <p>很多小仙女聚集在一起，围成一圈跳舞的时候，由于妖精们的魔力，跳舞的圈子里会发出淡淡的光，出现被称为妖精之环”的现象。在这中心的东西就会与跳着舞的妖精们一起，被带到妖精之国去。</p>
+  <p>很多小仙女聚集在一起，围成一圈跳舞的时候，由于妖精们的魔力，跳舞的圈子里会发出淡淡的光，出现被称为妖精之环”的现象。在这中心的东西就会与跳着舞的妖精们一起，被带到<a href="资料妖精之国.htm">“妖精之国”</a>去。</p>
   <p>同样，被她们集群袭击时，像跳舞那样进行激烈淫乱的交合的她们也会产生“妖精之环”，被袭击的男性，醒过来会发现自己已经身处妖精之国。妖精之国充满了幸福，身处幸福之中就什么都不必考虑了，大概只需要与无数的她们永远的“玩耍”下去吧。</p>
     
     <hr>
