--- a/MGE1/目录1.htm
+++ b/MGE1/目录1.htm
@@ -64,11 +64,11 @@
 <br>
 <a href="资料妖精之国.htm">资料·妖精之国</a><br>
 <br>
-<a href="">42.精灵</a><br>
-<a href="">43.黑暗精灵</a><br>
+<a href="42精灵.htm">42.精灵</a><br>
+<a href="43黑暗精灵.htm">43.黑暗精灵</a><br>
 <a href="">44.矮人</a><br>
 <br>
-资料·精灵与矮人<br>
+<a href="">资料·精灵与矮人</a><br>
 <br>
 45.亚马逊女战士<br>
 46.爱丽丝<br>
