--- a/MGE1/目录1.htm
+++ b/MGE1/目录1.htm
@@ -66,9 +66,9 @@
 <br>
 <a href="42精灵.htm">42.精灵</a><br>
 <a href="43黑暗精灵.htm">43.黑暗精灵</a><br>
-<a href="">44.矮人</a><br>
+<a href="44矮人.htm">44.矮人</a><br>
 <br>
-<a href="">资料·精灵与矮人</a><br>
+<a href="资料精灵与矮人.htm">资料·精灵与矮人</a><br>
 <br>
 45.亚马逊女战士<br>
 46.爱丽丝<br>
