--- a/MGE1/目录1.htm
+++ b/MGE1/目录1.htm
@@ -70,8 +70,8 @@
 <br>
 <a href="资料精灵与矮人.htm">资料·精灵与矮人</a><br>
 <br>
-45.亚马逊女战士<br>
-46.爱丽丝<br>
+<a href="45亚马逊女战士.htm">45.亚马逊女战士</a><br>
+<a href="46爱丽丝.htm">46.爱丽丝</a><br>
 47.艾露普<br>
 48.独眼巨人<br>
 49.美人鱼<br>
