--- a/MGE1/目录1.htm
+++ b/MGE1/目录1.htm
@@ -72,82 +72,82 @@
 <br>
 <a href="45亚马逊女战士.htm">45.亚马逊女战士</a><br>
 <a href="46爱丽丝.htm">46.爱丽丝</a><br>
-47.艾露普<br>
-48.独眼巨人<br>
-49.美人鱼<br>
-50.梅洛<br>
-51.海洋主教<br>
-52.涅瑞伊得斯<br>
-53.斯库拉<br>
-54.卡律布狄斯<br>
-55.海生史莱姆<br>
-56.塞王<br>
+<a href="">47.艾露普</a><br>
+<a href="">48.独眼巨人</a><br>
+<a href="">49.美人鱼</a><br>
+<a href="">50.梅洛</a><br>
+<a href="">51.海洋主教</a><br>
+<a href="">52.涅瑞伊得斯</a><br>
+<a href="">53.斯库拉</a><br>
+<a href="">54.卡律布狄斯</a><br>
+<a href="">55.海生史莱姆</a><br>
+<a href="">56.塞王</a><br>
 <br>
-资料·海之魔物<br>
+<a href="">资料·海之魔物</a><br>
 <br>
-57.沙华鱼人<br>
-58.湿地史莱姆<br>
-59.巨大老鼠<br>
-60.大型蝠螂<br>
-61.魔虫<br>
-62.罗帕<br>
-63.魔像<br>
-64.石像鬼<br>
-65.宝箱怪<br>
-66.壶魔人<br>
-67.木乃伊<br>
-68.阿努比斯<br>
-69.斯芬克斯<br>
-70.蝎子人<br>
-71.丧尸<br>
-72.食尸鬼<br>
-73.幽灵<br>
-74.骷髅<br>
-75.梦魇<br>
-76.重身幽灵<br>
-77.杜拉罕<br>
-78.吸血鬼<br>
-79.小恶魔<br>
-80.黑暗史莱姆<br>
-81.别西卜<br>
+<a href="">57.沙华鱼人</a><br>
+<a href="">58.湿地史莱姆</a><br>
+<a href="">59.巨大老鼠</a><br>
+<a href="">60.大型蝠螂</a><br>
+<a href="">61.魔虫</a><br>
+<a href="">62.罗帕</a><br>
+<a href="">63.魔像</a><br>
+<a href="">64.石像鬼</a><br>
+<a href="">65.宝箱怪</a><br>
+<a href="">66.壶魔人</a><br>
+<a href="">67.木乃伊</a><br>
+<a href="">68.阿努比斯</a><br>
+<a href="">69.斯芬克斯</a><br>
+<a href="">70.蝎子人</a><br>
+<a href="">71.丧尸</a><br>
+<a href="">72.食尸鬼</a><br>
+<a href="">73.幽灵</a><br>
+<a href="">74.骷髅</a><br>
+<a href="">75.梦魇</a><br>
+<a href="">76.重身幽灵</a><br>
+<a href="">77.杜拉罕</a><br>
+<a href="">78.吸血鬼</a><br>
+<a href="">79.小恶魔</a><br>
+<a href="">80.黑暗史莱姆</a><br>
+<a href="">81.别西卜</a><br>
 <a href="82巴风特.htm">82.巴风特</a><br>
-83.魔女<br>
+<a href="">83.魔女</a><br>
 <br>
 <a href="资料萨巴斯.htm">资料·萨巴斯</a><br>
-资料·魔物的魔法<br>
+<a href="">资料·魔物的魔法</a><br>
 <br>
-84.妖狐<br>
-85.雪女<br>
-86.赤鬼<br>
-87.乌鸦天狗<br>
-88.河童<br>
-89.女郎蜘蛛<br>
-90.狐仙<br>
+<a href="">84.妖狐</a><br>
+<a href="">85.雪女</a><br>
+<a href="">86.赤鬼</a><br>
+<a href="">87.乌鸦天狗</a><br>
+<a href="">88.河童</a><br>
+<a href="">89.女郎蜘蛛</a><br>
+<a href="">90.狐仙</a><br>
 <br>
-资料·日本<br>
+<a href="">资料·日本</a><br>
 <br>
-91.天使<br>
-92.黑暗天使<br>
-93.黑暗祭祀<br>
+<a href="">91.天使</a><br>
+<a href="">92.黑暗天使</a><br>
+<a href="">93.黑暗祭祀</a><br>
 <br>
-资料·神之眷属与世界的构造<br>
+<a href="">资料·神之眷属与世界的构造</a><br>
 <br>
-94.龙<br>
+<a href="">94.龙</a><br>
 <br>
-资料·元素精灵<br>
+<a href="">资料·元素精灵</a><br>
 <br>
-95.温蒂妮<br>
-96.伊格尼斯<br>
-97.希尔芙<br>
-98.诺姆<br>
-99.黑暗物质<br>
+<a href="">95.温蒂妮</a><br>
+<a href="">96.伊格尼斯</a><br>
+<a href="">97.希尔芙</a><br>
+<a href="">98.诺姆</a><br>
+<a href="">99.黑暗物质</a><br>
 <br>
-资料·魔界<br>
-资料·魔王希冀的理想乡<br>
+<a href="">资料·魔界</a><br>
+<a href="">资料·魔王希冀的理想乡</a><br>
 <br>
-100.莉莉姆<br>
+<a href="">100.莉莉姆</a><br>
 <br>
-后记<br>
+<a href="">后记</a><br>
 
 <br>
 <br>
