--- a/MGE1/目录1.htm
+++ b/MGE1/目录1.htm
@@ -72,9 +72,9 @@
 <br>
 <a href="45亚马逊女战士.htm">45.亚马逊女战士</a><br>
 <a href="46爱丽丝.htm">46.爱丽丝</a><br>
-<a href="">47.艾露普</a><br>
-<a href="">48.独眼巨人</a><br>
-<a href="">49.美人鱼</a><br>
+<a href="47艾露普.htm">47.艾露普</a><br>
+<a href="48独眼巨人.htm">48.独眼巨人</a><br>
+<a href="49美人鱼.htm">49.美人鱼</a><br>
 <a href="">50.梅洛</a><br>
 <a href="">51.海洋主教</a><br>
 <a href="">52.涅瑞伊得斯</a><br>
