--- a/MGE1/44矮人.htm
+++ b/MGE1/44矮人.htm
@@ -44,7 +44,7 @@
     
     <hr>
     附图：
-    <img src="img\魔物娘图鉴I\68-69沙罗曼蛇.jpg">  
+    <img src="img\魔物娘图鉴I\100-101矮人.jpg">  
   </body>
   
   </html>
