--- a/MGE1/目录1.htm
+++ b/MGE1/目录1.htm
@@ -75,9 +75,9 @@
 <a href="47艾露普.htm">47.艾露普</a><br>
 <a href="48独眼巨人.htm">48.独眼巨人</a><br>
 <a href="49美人鱼.htm">49.美人鱼</a><br>
-<a href="">50.梅洛</a><br>
-<a href="">51.海洋主教</a><br>
-<a href="">52.涅瑞伊得斯</a><br>
+<a href="50梅洛.htm">50.梅洛</a><br>
+<a href="51海洋主教.htm">51.海洋主教</a><br>
+<a href="52涅瑞伊得斯.htm">52.涅瑞伊得斯</a><br>
 <a href="">53.斯库拉</a><br>
 <a href="">54.卡律布狄斯</a><br>
 <a href="">55.海生史莱姆</a><br>
