--- a/MGE1/目录1.htm
+++ b/MGE1/目录1.htm
@@ -78,9 +78,9 @@
 <a href="50梅洛.htm">50.梅洛</a><br>
 <a href="51海洋主教.htm">51.海洋主教</a><br>
 <a href="52涅瑞伊得斯.htm">52.涅瑞伊得斯</a><br>
-<a href="">53.斯库拉</a><br>
-<a href="">54.卡律布狄斯</a><br>
-<a href="">55.海生史莱姆</a><br>
+<a href="53斯库拉.htm">53.斯库拉</a><br>
+<a href="54卡律布狄斯.htm">54.卡律布狄斯</a><br>
+<a href="55海生史莱姆.htm">55.海生史莱姆</a><br>
 <a href="">56.塞王</a><br>
 <br>
 <a href="">资料·海之魔物</a><br>
