更新资料海中的魔物

--- a/MGE1/目录1.htm
+++ b/MGE1/目录1.htm
@@ -81,7 +81,7 @@
 <a href="53斯库拉.htm">53.斯库拉</a><br>
 <a href="54卡律布狄斯.htm">54.卡律布狄斯</a><br>
 <a href="55海生史莱姆.htm">55.海生史莱姆</a><br>
-<a href="">56.塞王</a><br>
+<a href="56塞壬.htm">56.塞王</a><br>
 <br>
 <a href="">资料·海之魔物</a><br>
 <br>
