更新资料海中的魔物

--- a/MGE1/目录1.htm
+++ b/MGE1/目录1.htm
@@ -83,7 +83,7 @@
 <a href="55海生史莱姆.htm">55.海生史莱姆</a><br>
 <a href="56塞壬.htm">56.塞王</a><br>
 <br>
-<a href="">资料·海之魔物</a><br>
+<a href="资料海中的魔物.htm">资料·海之魔物</a><br>
 <br>
 <a href="">57.沙华鱼人</a><br>
 <a href="">58.湿地史莱姆</a><br>
