--- a/MGE1/目录1.htm
+++ b/MGE1/目录1.htm
@@ -81,14 +81,14 @@
 <a href="53斯库拉.htm">53.斯库拉</a><br>
 <a href="54卡律布狄斯.htm">54.卡律布狄斯</a><br>
 <a href="55海生史莱姆.htm">55.海生史莱姆</a><br>
-<a href="56塞壬.htm">56.塞王</a><br>
+<a href="56塞壬.htm">56.塞壬</a><br>
 <br>
 <a href="资料海中的魔物.htm">资料·海之魔物</a><br>
 <br>
-<a href="">57.沙华鱼人</a><br>
-<a href="">58.湿地史莱姆</a><br>
-<a href="">59.巨大老鼠</a><br>
-<a href="">60.大型蝠螂</a><br>
+<a href="57沙华鱼人.htm">57.沙华鱼人</a><br>
+<a href="58湿地史莱姆.htm">58.湿地史莱姆</a><br>
+<a href="59巨大老鼠.htm">59.巨大老鼠</a><br>
+<a href="60大型蛞蝓.htm">60.大型蛞蝓</a><br>
 <a href="">61.魔虫</a><br>
 <a href="">62.罗帕</a><br>
 <a href="">63.魔像</a><br>
